--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -2,5 +2,7 @@
 <resources>
 
     <string name="app_name">Eat the fly</string>
-    <string name="app_id">EatTheFly</string>
+    <string name="leaderboard_highest">leaderboard_highest</string>
+    <string name="achievement_dum_dum">achievement_dum_dum</string>
+    <!--<string name="app_id">EatTheFly</string>-->
 </resources>
