--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -2,6 +2,14 @@
 <resources>
 
     <string name="app_name">Eat the fly</string>
-    <string name="leaderboard_highest">leaderboard_highest</string>
+    <string name="app_id">489759683196</string>
+    <string name="package_name">com.mygdx.etf.android</string>
+
+    <string name="achievement_hunger_strike">CgkI_OTOv6AOEAIQAg</string>
+    <string name="achievement_buttefly_eater">CgkI_OTOv6AOEAIQAw</string>
+    <string name="achievement_collector">CgkI_OTOv6AOEAIQBA</string>
+    <string name="achievement_dog_persone">CgkI_OTOv6AOEAIQBQ</string>
+    <string name="achievement_queen_slayer">CgkI_OTOv6AOEAIQBg</string>
+    <string name="leaderboard_stars">CgkI_OTOv6AOEAIQAQ</string>
     <!--<string name="app_id">EatTheFly</string>-->
 </resources>
